# pndrpg

code/nel/include/nel/3d/: driver.h  driver_user.h  ps_force.h  u_driver.h  u_text_context.h
code/nel/include/nel/misc/: cursor.h  display.h  event_emitter_multi.h  mutex.h  system.h  window.h
code/nel/samples/3d/cluster_viewer/: main.cpp
code/nel/samples/3d/font/: main.cpp
code/nel/samples/3d/shape_viewer/: main.cpp
code/nel/samples/misc/system/: CMakeLists.txt  main.cpp
code/nel/samples/net/udp/: graph.cpp
code/nel/samples/pacs/: main.cpp
code/nel/samples/sound_sources/: sound_sources.vcproj
code/nel/src/3d/: computed_string.cpp  driver.cpp  driver_user.cpp  flare_model.cpp  font_manager.cpp  motion_blur.cpp  nelu.cpp  shadow_map_manager.cpp  text_context_user.cpp
code/nel/src/3d/driver/direct3d/: driver_direct3d.cpp  driver_direct3d.h  driver_direct3d_index.cpp  driver_direct3d_light.cpp  driver_direct3d_material.cpp  driver_direct3d_matrix.cpp  driver_direct3d_render.cpp  driver_direct3d_texture.cpp  driver_direct3d_vertex.cpp  stddirect3d.h
code/nel/src/3d/driver/opengl/: driver_opengl.cpp  (+4 more)
code/nel/src/misc/: CMakeLists.txt  cursor.cpp  display.cpp  displayer.cpp  event_emitter_multi.cpp  mutex.cpp  sheet_id.cpp  system.cpp  window.cpp
code/nel/src/misc/system/: android_window.h  cocoa_event_emitter.cpp  cocoa_event_emitter.h  cocoa_window.cpp  cocoa_window.h  di_event_emitter.cpp  di_event_emitter.h  di_game_device.cpp  di_game_device.h  di_keyboard_device.cpp  di_keyboard_device.h  di_mouse_device.cpp  di_mouse_device.h  no_window.cpp  no_window.h  qt_window.h  system_utils.cpp  system_utils.h  unix_event_emitter.cpp  unix_event_emitter.h  win32_cursor.cpp  win32_cursor.h  win32_display.cpp  win32_display.h  win32_system.cpp  win32_system.h  win32_window.cpp  win32_window.h  win_event_emitter.cpp  win_event_emitter.h  x11_display.cpp  x11_display.h  x11_system.cpp  x11_system.h  x11_window.cpp  x11_window.h
code/nel/src/sound/driver/: listener.cpp
code/nel/tools/3d/object_viewer_qt/src/plugins/build_gamedata/: CMakeLists.txt  build_gamedata.qrc  build_gamedata_constants.h  build_gamedata_plugin.cpp  build_gamedata_plugin.h  build_gamedata_settings_page.cpp  build_gamedata_settings_page.h  build_gamedata_settings_page.ui  build_gamedata_view.cpp  build_gamedata_view.h  build_gamedata_view.ui
code/nel/tools/3d/object_viewer_qt/src/plugins/testing/: CMakeLists.txt  ais_editor_main_window.cpp  ais_editor_main_window.h  ais_editor_main_window.ui  ais_editor_plugin.cpp  ais_editor_plugin.h  ais_text_editor.cpp  ais_text_editor.h
code/nel/tools/build_gamedata/: 0_setup.py
code/nel/tools/pipeline/plugin_library/: pipeline_interface.cpp
code/nel/tools/pipeline/plugin_max/: process_max_shape.h
code/nel/tools/pipeline/plugin_nel/: process_texture_dds.h
code/ryzom/client/src/: bg_downloader_access.cpp  client_cfg.cpp  client_chat_manager.cpp  commands.cpp  connection.cpp  far_tp.cpp  graph.cpp  init.cpp  input.cpp  login.cpp  stdpch.h
code/ryzom/client/src/interface_v3/: action_handler_game.cpp  action_handler_help.cpp  action_handler_misc.cpp  chat_window.cpp  group_in_scene.cpp  group_in_scene_bubble.cpp  input_handler_manager.cpp  interface_3d_scene.cpp  interface_manager.cpp  interface_manager.h  music_player.cpp  people_interraction.cpp
code/ryzom/client/src/motion/: user_controls.cpp
code/ryzom/client/src/r2/: editor.cpp
code/ryzom/common/src/game_share/: chat_group.h
code/ryzom/server/src/ai_service/: state_instance.cpp  state_instance.h
code/ryzom/server/src/pd_support_service/: CMakeLists.txt
code/tool/increment_version/: increment_version.vcproj
code/web/docs/ryzom_ams_docs/doxygen/: Doxyfile
code/web/public_php/ams/css/: custom.css
code/web/public_php/ams/templates/: createticket.tpl  dashboard.tpl  forgot_password.tpl  homebackup.tpl  install.tpl  install_plugin.tpl  layout.tpl  layout_admin.tpl  layout_mod.tpl  layout_user.tpl  login.tpl  logout.tpl  plugins.tpl  plugins_update.tpl  register.tpl  register_feedback.tpl  reset_password.tpl  reset_success.tpl  settings.tpl  sgroup_list.tpl  show_queue.tpl  show_reply.tpl  show_sgroup.tpl  show_ticket.tpl  show_ticket_info.tpl  show_ticket_log.tpl  show_user.tpl  syncing.tpl  userlist.tpl
(+73 files in other folders)
