INCLUDE_DIRECTORIES(	${CMAKE_CURRENT_BINARY_DIR}
			${CMAKE_CURRENT_SOURCE_DIR}
			${LIBXML2_INCLUDE_DIR}
			${QT_INCLUDES})

FILE(GLOB SRC *.cpp *.h)
SET(OVQT_EXT_SYS_SRC	${CMAKE_CURRENT_SOURCE_DIR}/../../extension_system/iplugin.h
			${CMAKE_CURRENT_SOURCE_DIR}/../../extension_system/iplugin_manager.h
			${CMAKE_CURRENT_SOURCE_DIR}/../../extension_system/iplugin_spec.h)

SET(OVQT_AIS_EDIT_PLUGIN_HDR
			ais_editor_plugin.h
			ais_editor_main_window.h
			ais_text_editor.h)

SET(OVQT_AIS_EDIT_PLUGIN_UIS
				ais_editor_main_window.ui)

SET(QT_USE_QTGUI TRUE)
SET(QT_USE_QTOPENGL TRUE)

QT4_WRAP_CPP(OVQT_AIS_EDIT_PLUGIN_MOC_SRC ${OVQT_AIS_EDIT_PLUGIN_HDR})
QT4_WRAP_UI(OVQT_AIS_EDIT_PLUGIN_UI_HDRS ${OVQT_AIS_EDIT_PLUGIN_UIS})

SOURCE_GROUP(QtGeneratedUiHdr FILES ${OVQT_AIS_EDIT_PLUGIN_UI_HDRS})
SOURCE_GROUP(QtGeneratedMocSrc FILES ${OVQT_AIS_EDIT_PLUGIN_MOC_SRC})
SOURCE_GROUP("AI Script Editor Plugin" FILES ${SRC})
SOURCE_GROUP("OVQT Extension System" FILES ${OVQT_EXT_SYS_SRC})

ADD_LIBRARY(ovqt_plugin_testing MODULE ${SRC} ${OVQT_AIS_EDIT_PLUGIN_MOC_SRC} ${OVQT_EXT_SYS_SRC} ${OVQT_AIS_EDIT_PLUGIN_UI_HDRS})

TARGET_LINK_LIBRARIES(ovqt_plugin_testing ovqt_plugin_core nelmisc nel3d ${QT_LIBRARIES})

IF(WITH_STLPORT)
  TARGET_LINK_LIBRARIES(ovqt_plugin_testing ${CMAKE_THREAD_LIBS_INIT})
ENDIF(WITH_STLPORT)

NL_DEFAULT_PROPS(ovqt_plugin_testing "NeL, Tools, 3D: Object Viewer Qt Plugin: AI Script Editor")
NL_ADD_RUNTIME_FLAGS(ovqt_plugin_testing)
NL_ADD_LIB_SUFFIX(ovqt_plugin_testing)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS} -DQT_PLUGIN -DQT_SHARED ${QT_DEFINITIONS})

INSTALL(TARGETS ovqt_plugin_testing LIBRARY DESTINATION lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib COMPONENT tools3d)